2013-05-28  Niibe Yutaka  <gniibe@fsij.org>

	* chopstx.c (chopstx_intr_wait): Rename from chopstx_wait_intr.
	(chopstx_usec_wait): Rename from chosptx_usleep.
	(chopstx_cancel, chopstx_testcancel): New.

2013-05-27  Niibe Yutaka  <gniibe@fsij.org>

	* chopstx.c (chx_fatal, chopstx_exit, chopstx_join): New.
	(struct chx_thread): Independent member of state.  Use bit fields.
	(chx_timer_expired, chx_handle_intr): Check priority before
	calling chx_request_preemption.
	(chx_disable_intr): Clear pending interrupt too.
	(chopstx_claim_irq): Rename from chopstx_intr_register.
	(chopstx_release_irq): New.
	(chopstx_join): Promote priority of thread to be joined.

2013-05-24  Niibe Yutaka  <gniibe@fsij.org>

	* chopstx.c (chx_request_preemption): Rename from chx_preempt.

	* entry.c: "sys.h" is only for to new sys 2.0, keeping
	compatibility to 1.0, it is if-def out now.

2013-05-22  Niibe Yutaka  <gniibe@fsij.org>

	* chopstx.c (chx_enable_intr, chx_disable_intr): Implement.
	(chx_set_intr_prio): New.
	(chx_handle_intr): Use list to register interrupt threads.
	(chx_init): Set PendSV priority (as minimum: bigger).

	* entry.c (vector_table): set chx_handle_intr for all interrupts.

2013-05-21  Niibe Yutaka  <gniibe@fsij.org>

	* Initial commit.
